--- a/src/components/ifood-kds/order-details-modal/order-details-modal.component.html
+++ b/src/components/ifood-kds/order-details-modal/order-details-modal.component.html
@@ -58,9 +58,15 @@
           <h4 class="font-semibold text-white mb-2">Pagamento</h4>
           <div class="space-y-2 text-sm bg-gray-700/50 p-3 rounded-lg">
             <div class="flex justify-between">
-              <span class="text-gray-300">Subtotal</span>
-              <span class="font-semibold text-white">{{ orderTotal() | currency:'BRL' }}</span>
+              <span class="text-gray-300">Subtotal Itens</span>
+              <span class="font-semibold text-white">{{ subTotal() | currency:'BRL' }}</span>
             </div>
+            @if(totalFees() > 0) {
+              <div class="flex justify-between">
+                <span class="text-gray-300">Taxas (entrega/serviço)</span>
+                <span class="font-semibold text-white">+ {{ totalFees() | currency:'BRL' }}</span>
+              </div>
+            }
             @if (orderBenefitsTotal() > 0) {
               <div>
                 <div class="flex justify-between">
@@ -77,7 +83,7 @@
             }
             <div class="flex justify-between font-bold text-lg pt-2 border-t border-gray-600">
               <span class="text-white">Total a Pagar</span>
-              <span class="text-green-400">{{ (orderTotal() - orderBenefitsTotal()) | currency:'BRL' }}</span>
+              <span class="text-green-400">{{ finalTotal() | currency:'BRL' }}</span>
             </div>
              <div class="pt-2 border-t border-gray-600">
                 <p class="text-gray-300">{{ o.paymentMethod }}</p>
