feat(ifood-kds): Detalhar taxas no modal de pedidos
Separa a exibição das taxas de entrega e taxas adicionais no modal de detalhes do pedido iFood para maior clareza.

--- a/src/components/ifood-kds/order-details-modal/order-details-modal.component.html
+++ b/src/components/ifood-kds/order-details-modal/order-details-modal.component.html
@@ -61,10 +61,16 @@
               <span class="text-gray-300">Subtotal Itens</span>
               <span class="font-semibold text-white">{{ subTotal() | currency:'BRL' }}</span>
             </div>
-            @if(totalFees() > 0) {
+            @if(deliveryFee() > 0) {
               <div class="flex justify-between">
-                <span class="text-gray-300">Taxas (entrega/serviço)</span>
-                <span class="font-semibold text-white">+ {{ totalFees() | currency:'BRL' }}</span>
+                <span class="text-gray-300">Taxa de Entrega</span>
+                <span class="font-semibold text-white">+ {{ deliveryFee() | currency:'BRL' }}</span>
+              </div>
+            }
+            @if(additionalFees() > 0) {
+              <div class="flex justify-between">
+                <span class="text-gray-300">Taxa de Serviço</span>
+                <span class="font-semibold text-white">+ {{ additionalFees() | currency:'BRL' }}</span>
               </div>
             }
             @if (orderBenefitsTotal() > 0) {
