--- a/src/components/ifood-kds/order-details-modal/order-details-modal.component.html
+++ b/src/components/ifood-kds/order-details-modal/order-details-modal.component.html
@@ -92,9 +92,9 @@
               <span class="text-green-400">{{ finalTotal() | currency:'BRL' }}</span>
             </div>
              <div class="pt-2 border-t border-gray-600">
-                <p class="text-gray-300">{{ o.paymentMethod }}</p>
+                <p class="text-gray-300 font-semibold">{{ o.paymentDetails }}</p>
                 @if(o.changeDue && o.changeDue > 0) {
-                    <p class="text-yellow-300">Troco para: {{ o.changeDue | currency:'BRL' }}</p>
+                    <p class="text-yellow-300 mt-1">Troco para: {{ o.changeDue | currency:'BRL' }}</p>
                 }
             </div>
           </div>
